# Shadowbroker

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  DATA-ATTRIBUTION.md  Makefile  Mesh.md  README.md  docker-compose.build.yml  docker-compose.gitlab.yml  docker-compose.relay.yml  docker-compose.yml  kill_wormhole.bat  kill_wormhole.sh  killwormhole.bat  killwormhole.sh  meshnode.bat  meshnode.sh  pyproject.toml  start-backend.js  start.bat  start.sh  stop.bat  wormhole-start.bat  wormhole-start.sh
backend/: .dockerignore  .env.example  Dockerfile  ais_proxy.js  auth.py  docker-entrypoint.sh  gate_sse.py  limiter.py  main.py  node_state.py  pyproject.toml  pytest.ini  requirements.txt  wormhole_server.py
backend/config/: news_feeds.json
backend/data/: aisstream_spki_pins.json  carrier_seed.json  datacenters.json  datacenters_geocoded.json  kiwisdr_directory.json  military_bases.json  plan_ccg_vessels.json  release_digests.json  tor_bundle_digests.json  tracked_names.json  yacht_alert_db.json
backend/routers/: admin.py  ai_intel.py  cctv.py  data.py  health.py  infonet.py  mesh_dm.py  mesh_operator.py  mesh_oracle.py  mesh_peer_sync.py  mesh_public.py  radio.py  sar.py  sigint.py  tools.py  wormhole.py
backend/scripts/: bootstrap_manifest_helper.py  check-env.ps1  check-env.sh  convert_power_plants.py  diagnostics.py  release_helper.py  repair_wormhole_secure_storage.py  rotate_secure_storage_secret.py  scan-secrets.sh  setup-venv.ps1  setup-venv.sh
backend/services/: ai_intel_store.py  ai_pin_store.py  ais_stream.py  analysis_zone_store.py  api_settings.py  carrier_tracker.py  cctv_pipeline.py  config.py  constants.py  correlation_engine.py  data_fetcher.py  env_check.py  feed_ingester.py  fetch_health.py  geocode.py  geocode_validate.py  geopolitics.py  kiwisdr_fetcher.py  liveuamap_scraper.py  logging_setup.py  meshtastic_mqtt_settings.py  network_utils.py  news_feed_config.py  node_settings.py  openclaw_bridge.py  openclaw_channel.py  openclaw_watchdog.py  oracle_service.py  privacy_claims.py  privacy_core_attestation.py  privacy_core_client.py  psk_reporter_fetcher.py  radio_intercept.py  region_dossier.py  release_profiles.py  satnogs_fetcher.py  schemas.py  sentinel_search.py  shodan_connector.py  sigint_bridge.py  (+12 more)
backend/tests/: conftest.py  test_1b_admin_hardening.py  test_2a_reliability.py  test_2b_data_access.py  test_2c_exception_visibility.py  test_3b_backend_split.py  test_3c_router_extraction.py  test_3d_peer_sync_canonicalization.py  test_5c_auth_log_redaction.py  test_5e_meshtastic_transport.py  test_ais_spki_pinning.py  test_ais_upstream_health.py  test_aishub_fallback.py  test_api_settings.py  test_api_smoke.py  test_badhost_hardening.py  test_carrier_tracker_quality.py  test_cctv_pipeline.py  test_cctv_redirect_ssrf.py  test_control_surface_auth.py  test_crowdthreat_opt_in.py  test_dm_relay_per_sender_cap.py  test_dm_replicate_envelope_endpoint.py  test_docker_bridge_hostname_trust.py  test_fetch_health.py  test_fetchers_geo.py  test_flight_observations.py  test_flight_source_attribution.py  test_gdelt_gcs_direct_rewrite.py  test_gdelt_https.py  test_gdelt_updater_hardening.py  test_geo_fetchers.py  test_geocode_api.py  test_gps_jamming_detector.py  (+39 more)
privacy-core/: Cargo.toml
(+703 files in other folders)
